--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <main>
         <h1>Palindrome Checker</h1>
-        <p>A palindrome is a word or phrase that reads the same backwards as forwards, e.g level, refer.</p>
+        <p>A palindrome is a word or phrase that reads the same backwards as forwards.</p>
         <input type="text" placeholder="Enter a word or phrase" id="text">
         <button onclick="check()">Check Palindrome</button>
 
